# lang

./: .gitignore  Lexer.hs  Main.hs  Makefile  Operators.hs  Parser.hs  Runner.hs  Types.hs  lang.cabal  makefile  test.hs  test.txt
src/: Compiler.hs  Main.hs  Operators.hs  Parser.hs  Runner.hs  Types.hs
